WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116591
Fix issues with focus rings on search fields
https://bugs.webkit.org/show_bug.cgi?id=116591
Summary
Fix issues with focus rings on search fields
Simon Fraser (smfr)
Reported
2013-05-21 22:30:48 PDT
Fix issues with focus rings on search fields
Attachments
Patch
(4.13 KB, patch)
2013-05-21 22:35 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-05-21 22:35:49 PDT
Created
attachment 202498
[details]
Patch
Darin Adler
Comment 2
2013-05-22 07:46:04 PDT
Comment on
attachment 202498
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202498&action=review
> Source/WebKit/mac/WebView/WebHTMLView.mm:4953 > + // Required to fix search field focus rings <
rdar://problem/13780122
>.
The use of "fix" here is not clear enough. It would be better if this comment was more specific about what exactly AppKit does when we return YES here that helps us. I tried to read your comment in the change log, but I couldn’t understand it.
Simon Fraser (smfr)
Comment 3
2013-05-22 12:06:45 PDT
https://trac.webkit.org/r150530
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug