Fix issues with focus rings on search fields https://bugs.webkit.org/show_bug.cgi?id=116591

Source/WebCore:

Reviewed by Darin Adler.

On a future OS, the rect returned by _focusRingVisibleRect should
be in the coordinate system of the that NSView, not the base
coordinate system, so fix the code that sets and reads the global
focusRingClipRect variable accordingly.

* platform/graphics/mac/WebLayer.mm:
(drawLayerContents):
* platform/mac/ThemeMac.mm:
(-[WebCoreFlippedView _focusRingVisibleRect]):

Source/WebKit/mac:

Reviewed by Darin Adler.

In WebKit1, focus rings didn't render correctly on some OSes until
some other control drew a focus ring, which changes internal AppKit state
on the focused view. Fix by overriding an internal AppKit method to always
disable AppKit's "automatic" focus ring drawing.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _automaticFocusRingDisabled]):

Canonical link: https://commits.webkit.org/134928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150530 268f45cc-cd09-0410-ab3c-d52691b4dbfc