Source/WebCore/platform/mac/ThemeMac.mm
@@ -66,7 +66,9 @@ NSRect focusRingClipRect;
         return [self visibleRect];
 
     NSRect rect = focusRingClipRect;
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 1090
     rect.origin.y = [self bounds].size.height - NSMaxY(rect);
+#endif
 
     return rect;
 }
